# crm-system

./: .gitignore  README.md  pyproject.toml  qwe.py
crm_system/: .template.env  DockerFile  docker-compose.yaml  nginx.conf  permissions.py  pyproject.toml
crm_system/advertising_companies/: admin.py  models.py  urls.py  views.py
crm_system/advertising_companies/migrations/: 0001_initial.py  0002_alter_advertising_service.py
crm_system/contracts/: forms.py  models.py  urls.py  views.py
crm_system/contracts/migrations/: 0001_initial.py  0002_alter_contract_service.py  0003_alter_contract_service.py  0004_rename_sum_contract_cost.py  0005_alter_contract_cost_alter_contract_document_and_more.py
crm_system/crm_system/: settings.py  urls.py
crm_system/customers/: admin.py  models.py  urls.py  views.py
crm_system/customers/migrations/: 0001_initial.py  0002_activeclient_advertising.py  0003_remove_activeclient_advertising_and_more.py  0004_alter_activeclient_potential_client.py
crm_system/leads/: admin.py  models.py  urls.py  views.py
crm_system/leads/migrations/: 0001_initial.py  0002_potentialclient_first_name.py  0003_rename_full_name_potentialclient_last_name.py  0004_alter_potentialclient_first_name_and_more.py  0005_alter_potentialclient_phone.py  0006_alter_potentialclient_advertising_and_more.py
crm_system/products/: forms.py  models.py  serializers.py  tests.py  urls.py  views.py
crm_system/products/migrations/: 0001_initial.py  (+1 more)
crm_system/services/: models.py
crm_system/templates/: _base.html
crm_system/users/: models.py  urls.py  views.py
(+23 files in other folders)
